# mobmore

./: .mob  shell.nix
rust/: .gitignore  Cargo.toml
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/anagram/: Cargo.toml
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/anagram/tests/: anagram.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/assembly-line/tests/: assembly-line.rs
rust/beer-song/: Cargo.toml
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/difference-of-squares/.exercism/: metadata.json
rust/forth/: Cargo.toml
rust/forth/.exercism/: metadata.json
rust/forth/src/: builtin.rs  code_lexeme.rs  colon_definition.rs  definition_code.rs  forth.rs  lexeme.rs  lib.rs  line.rs  stack.rs  word.rs  word_or_value.rs  word_or_value_sequence.rs  wordlist.rs
rust/gigasecond/.exercism/: metadata.json
rust/grains/.exercism/: metadata.json
rust/grains/src/: lib.rs
rust/health-statistics/.exercism/: metadata.json
rust/high-scores/: Cargo.toml
rust/high-scores/.exercism/: metadata.json
rust/leap/src/: lib.rs
rust/magazine-cutout/: micro-retro.md
rust/minesweeper/: Cargo.toml
rust/nth-prime/: Cargo.toml
rust/poker/: .gitignore  Cargo.toml
rust/proverb/: Cargo.toml
rust/semi-structured-logs/: micro-retro.md
(+49 files in other folders)
