[workspace]

members = [
"anagram",
"armstrong-numbers",
"assembly-line",
"beer-song",
"bob",
"clock",
"difference-of-squares",
"forth",
"gigasecond",
"grains",
"health-statistics",
"leap",
"low-power-embedded-game",
"luhn",
"macros",
"magazine-cutout",
"minesweeper",
"nth-prime",
"parallel-letter-frequency",
"poker",
"prime-factors",
"proverb",
"raindrops",
"resistor-color",
"reverse-string",
"role-playing-game",
"rpn-calculator",
"semi-structured-logs",
"short-fibonacci",
"space-age",
"sublist",
"sum-of-multiples"
]